Version 0.19 ( )
-------------------------------

- Vlad Grachov brought the new function called
  libssh2_session_block_directions() which returns a bitmask for what
  directions the connection blocks. It is to be used applications that use
  non-blocking sockets and when a libssh2 function returns
  LIBSSH2_ERROR_EAGAIN this function can be used to figure out in which
  direction the socket would block and thus it can wait for the socket to
  again be ready for communication in that direction before it calls libssh2
  again.

- Vincent Jaulin brought the new libssh2_channel_request_pty_size_ex()
  function.

- Carlo Bramini fixed the build for msys+mingw. Bug #1943976.

- Neil Gierman provided improved Visual Studio 2008 code in bug #1946268

- Bug #1862727 fixed libssh2_poll() to work on windows (by defining
  HAVE_SELECT).

- Based on bug #1815692, we introduce libssh2_sftp_seek2() that allows seeking
  beyond the 2GB margin even on 32bit machines.

- Based on a patch in bug #1878059 by Steven Ayre libssh2 now parses >2GB file
  sizes when downloading SCP files.

- Bug #2064371 pointed out that the SSH2 banner may not use dash
  ('-'). Reported by Bjorn Stenborg.

- Sean Peterson fixed a key re-exchange bug:
  http://daniel.haxx.se/projects/libssh2/mail/libssh2-devel-archive-2008-06/0002.shtml

- Mike Protts filed the bug report #1908724 that identified and fixed a problem
  with SFTP stat on files >4GB in size. Previously it used 32bit math only.

- Removed a stderr debug message that was accidentally left in (bug #1863153)

- OpenSSL and libz detection changed to make cross-compiling to Mingw
  work.  See README for parameters to use if the auto-detection does
  not work for you.  From Simon Josefsson.

- Simon Josefsson added a self-test that uses libssh2 to connect to a
  local sshd (only enabled if if OpenSSH is installed).

Version 0.18 (November 11 2007)
-------------------------------
